tests/testeErros.c
int x;
float y;
char letra;

int a = 10;
float b = 5.5;
int soma = a + 5 * 2;

x = 20;
y = (a + b) / 2;
letra = 65;

{
    int z;
    z = x + a;
}


int erro1 = ; 

float erro2 10;

y = * 5;

if while for;

int final = 100;